Updated to the new version of the code.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <p>Asking questions early avoids many problems later, so questions are encouraged, though they may be directed to the appropriate individual or forum. Those who are asked should be responsive and helpful.</p>
 <h2 id="discrimination"><span class="header-section-number">1.2</span> Discrimination</h2>
 <p>We are dedicated to creating and preserving an inclusive, nondiscriminatory environment, regardless of age, gender, gender identity and expression, sexual orientation, disability, physical appearance, body size, race, or religion.</p>
-<p>Accessibility is an important part of being inclusive. We favor accessible venues, try to document accessibility issues and welcome suggestions for accessible alternatives to any non-accessible venue.</p>
+<p>Accessibility is an important part of being inclusive. We favor accessibility, and where accessibility issues are identified, we strive to document and communicate them. When accessible alternatives to any tools or venues are brought to our attention, we investigate them to the best of our ability.</p>
 <h2 id="harassment"><span class="header-section-number">1.3</span> Harassment</h2>
 <p>We are dedicated to provide a harassment-free community for everyone.</p>
 <p>Harassment includes offensive verbal comments, deliberate intimidation, stalking, following, unwanted photography or recording, sustained disruption of talks or other events, unconsensual deliberate physical contact, and unwelcome sexual attention. Participants asked to stop any harassing behavior are expected to comply immediately.</p>
@@ -41,11 +41,11 @@
 <p>Plagiarism cannot be tolerated. When using other people's work in your presentations or materials, appropriate references and citing of sources is necessary.</p>
 <p>Piracy cannot be tolerated. If you're unsure about the intellectual property rights of a work, please talk with members of the community. Copyright and intellectual property are areas of keen community interest.</p>
 <p>Explicit sexual topics, sexual touching, or sexual imagery are not appropriate for any event or related function. It is always off topic, it is not inclusive or sensitive to all the different groups which may be present at events.</p>
-<p>If an event will by its nature have sexual topics, touching or imagery, the Linux community's name, GTALUG or TLUG should should not be included and invitations should not be sent to the official public channels of the community.</p>
+<p>If a third party event will knowingly encourage or participate in any of the above activities, the community's name, GTALUG or TLUG should not be included and invitations should not be sent using the official public channels.</p>
 <h2 id="violating-the-code-of-conduct"><span class="header-section-number">1.5</span> Violating the Code of Conduct</h2>
 <p>When handling potential issues of harassment or unprofessionalism, please remember our principles of education and being respectful: &quot;We assume good intentions and do our best to act in an empathetic fashion.&quot; and &quot;we seek to teach people how to improve themselves rather than to quickly exclude them for their misunderstandings or mistakes.&quot;</p>
 <p>Participants violating these rules may be asked to leave the event by organizing members, or asked to no longer participate in any events by vote of the executive committee.</p>
-<p>This is not a zero tolerance policy. The members of the community are not trained judges, trained councilors, police officers or security guards. Zero tolerance places the burden of immediate judgement on the people involved, and ignores the important values of education and mutual respect in the community.</p>
+<p>This is not a zero tolerance policy. Zero tolerance places the burden of immediate judgement on the people involved, and ignores the important values of education and mutual respect in the community.</p>
 <p>We expect participants to follow these rules at all venues and related social events. The rules should not be seen as a burden, but as a point of pride of the community.</p>
 <p>As always, if you witness criminal behaviour, go to the police.</p>
 <h2 id="review"><span class="header-section-number">1.6</span> Review</h2>
